--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "php": ">=5.3.2"
     },
     "autoload": {
-        "psr-0": { "PhpThumb_": "lib/" }
+        "classmap": [
+            "lib/PhpThumb/PhpThumb.php"
+        ]
     }
 }
